tests/test_assets/semantic/invalid/switch/out_of_range_not_duplicate.cog
test_out_of_range::(value: u8) -> void {
    switch value {
        case 256: {}
        case 0: {}
        default: {}
    }
}
