tests/test_assets/semantic/invalid/switch/out_of_range_not_duplicate.expected
semantic error at line 3: switch case value does not fit switch expression type
1 semantic error generated.
